--- a/index.html
+++ b/index.html
@@ -5,6 +5,8 @@
   <title>Resume</title>
 </head>
 <body style="margin:0;">
-  <iframe frameborder="0" src="Resume 9-1-21.pdf" style="width:100%;height:100%;"></iframe>
+  <script>
+    window.location.href = '/resume.pdf';
+  </script>
 </body>
 </html>
