--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
 </head>
 <body style="margin:0;">
   <script>
-    window.location.href = '/Resume 9-1-21.pdf';
+    window.location.href = '/resume.pdf';
   </script>
 </body>
 </html>
